# midiface

./: .gitignore  .gitmodules  CMakeLists.txt  ContinuousStream.cpp  ContinuousStream.h  Event.h  File.cpp  Header.cpp  Header.h  ImmutableStream.cpp  ImmutableStream.h  ListeningStream.cpp  ListeningStream.h  Logger.cpp  Logger.h  MIDIFace.h  MIDIface.vcxproj  MIDIface.vcxproj.filters  Makefile  MemoryUtils.cpp  MemoryUtils.h  Spec.h  Stream.cpp  Stream.h  StreamFactory.cpp  StreamFactory.h  StreamFormat.h  TODO  Track.h  errutils.cpp  errutils.h  framework.h  make.bat  memutils.cpp  memutils.h  types.h
MIDIFaceUnitTest/: MIDIFaceUnitTest.vcxproj  MIDIFaceUnitTest.vcxproj.filters  MIDIStreamTest.cpp  Specializations.h  pch.h
MIDIfaceTest/: MIDIfaceTest.cpp  MIDIfaceTest.vcxproj  MIDIfaceTest.vcxproj.filters  TestLogger.cpp  pch.cpp
MIDIfaceTest/sources/: fixtures.cpp  test_api.cpp  test_logger.cpp  test_memutils.cpp  test_midifile.cpp  test_midistream.cpp
examples/sources/: dump-midi-file.c  read-midi-file.c
headers/: Logger.h  MIDIFace.h  MIDIFile.h  MIDIHeader.h  MIDIStream.h  MIDITrack.h  errutils.h  errutils.hpp  framework.h  logger.h  logger.hpp  memutils.h  memutils.hpp  midiface.h  midiface.hpp  midifile.h  midifile.hpp  midiheader.h  midiheader.hpp  midistream.h  midistream.hpp  miditrack.hpp  types.h
sources/: errutils.c  logger.c  logger.cpp  memutils.c  memutils.cpp  midifile.c  midifile.cpp  midiheader.c  midiheader.cpp  midistream.c  midistream.cpp  read-midi-file.c
src/: errutils.cpp  logger.cpp  memutils.cpp  midifile.cpp  midiheader.cpp  midistream.cpp
tests/sources/: fixtures.c  test_api.c  test_logger.c  test_memutils.c  test_midifile.c  test_midistream.c  tests.c
